// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-partial-view GetPartialViewByPathTool should get a partial view by path 1`] = `
{
  "content": [],
  "structuredContent": {
    "content": "@* Test get content *@
<div><p>Get Test Content</p></div>",
    "name": "_TestGetPartialView.cshtml",
    "parent": null,
    "path": "/_TestGetPartialView.cshtml",
  },
}
`;

exports[`get-partial-view GetPartialViewByPathTool should get a partial view in a folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "content": "@* Test get content *@
<div><p>Get Test Content</p></div>",
    "name": "_TestGetPartialView.cshtml",
    "parent": {
      "id": "00000000-0000-0000-0000-000000000000",
      "path": "/_TestGetPartialViewFolder",
    },
    "path": "/_TestGetPartialViewFolder/_TestGetPartialView.cshtml",
  },
}
`;

exports[`get-partial-view GetPartialViewByPathTool should handle invalid path format 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The partial view was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "Partial view not found",
    "type": "Error",
  },
}
`;

exports[`get-partial-view GetPartialViewByPathTool should handle non-existent partial view 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The partial view was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "Partial view not found",
    "type": "Error",
  },
}
`;

exports[`get-partial-view GetPartialViewFolderByPathTool should get a partial view folder by path 1`] = `
{
  "content": [],
  "structuredContent": {
    "name": "_TestGetPartialViewFolder",
    "parent": {
      "id": "00000000-0000-0000-0000-000000000000",
      "path": "/",
    },
    "path": "/_TestGetPartialViewFolder",
  },
}
`;

exports[`get-partial-view GetPartialViewFolderByPathTool should handle getting folder that is actually a partial view 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified folder was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "Not found",
    "type": "Error",
  },
}
`;

exports[`get-partial-view GetPartialViewFolderByPathTool should handle non-existent partial view folder 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified folder was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "Not found",
    "type": "Error",
  },
}
`;
